--- a/1.md
+++ b/1.md
@@ -1,1 +1,129 @@
-* xxx
+
+# [CWE-1032]: Misconfigured Email Records Leads to Email Spoofing: moneyonchain.com
+
+### Preface
+
+Hi moneyonchain team,
+
+This report is regarding the security issue which is effectively allowing forged emails from moneyonchain.com domain because spf,dkim and dmarc records are not properly configured.
+
+[1] [Responsible Disclosure Policy](https://en.wikipedia.org/wiki/Responsible_disclosure)  
+[2] [Security Bug Bounty](https://en.wikipedia.org/wiki/Bug_bounty_program)
+
+### Concept 
+
+> While checking for DNS entries for the moneyonchain.com domain, It appears that there are misconfigured record entries which effectively allowing for spam(spoof) emails to originate from that @moneyonchain.com email aliases. you can validate by testing yourself here: 
+
+[SPF Validator] (http://www.kitterman.com/spf/validate.html)
+
+* moneyonchain.com domain has a misconfigured spf record as following:
+
+```
+SPF TXT : v=spf1 include:_spf.google.com ~all
+```
+
+Below are some spf configurations workflows:
+
+* SPF set to hard fail(-) means that all emails suspected of being forged are ignored and not delivered.
+* If the SPF record is set to soft fail (~), emails are accepted/shown for the user but marked with a warning as suspicious.
+* If the SPF is set up as neutral (?), all emails are accepted and delivered.
+
+> You can fix the vulnerability by changing the current spf configuration to hard fail which will instruct the spf policy to set strict policy for emails to prevent such attacks. There are tons of articles on spf hard fail and soft fail to help in resolving the issue.
+
+https://www.digitalocean.com/community/tutorials/how-to-use-an-spf-record-to-prevent-spoofing-improve-e-mail-reliability
+
+> The article clearly shows the difference between soft mail and fail you should be using fail as Softmail allows anyone to send spoofed emails from your domains, - is strict which prevents all spoofed emails except if you are sending. you should use -
+
+
+----
+
+[DMARC Validator] (https://www.dmarcanalyzer.com/dmarc/dmarc-record-check/)
+
+* moneyonchain domain doesn't have dmarc record at all:
+
+```
+We could not find a DMARC record for moneyonchain.com domain
+```
+
+* It is also suggested to set up dmarc protection which will act as a aggregator to determine if the sender uses spf and dkim and if it fails then it will make email bounce and report the spoof event to provided email in dmarc record.
+
+[DKIM Validator] (https://www.dmarcanalyzer.com/dkim/dkim-check/)
+
+
+### Proof of Concept
+
+* Here's the sample proof of concept to reproduce the vulnerability:
+
+```python
+import smtplib, ssl
+smtp_server,port = "mail.smtp2go.com",2525
+username,password = "user","pass" ### https://www.smtp2go.com/
+
+sender_email = "support@moneyonchain.com"
+receiver_email = "victim@gmail.com"
+
+message = """Subject: Urgent : Email Spoofing Test : moneyonchain.com
+Change your passwords or send tokens at somesite."""
+context = ssl.create_default_context()
+with smtplib.SMTP(smtp_server, port) as server:
+    server.ehlo()
+    server.starttls(context=context)
+    server.ehlo() 
+    server.login(username, password)
+    server.sendmail(sender_email, receiver_email, message
+```
+
+* Result :
+
+> Email Directly Goes into Inbox : 
+
+![](https://i.imgur.com/YMLO4OS.png)
+![](https://i.imgur.com/KC9waft.png)
+
+### Technical details 
+
+> Over 95% of email sent over the internet consists of unwanted email: "spam". Most spam uses spoofed addresses. If your domains are being used in spam messages, spammers may be taking advantage of your users to:
+
+1. An attacker can trick users of moneyonchain.com to steal their tokens by hosting a duplicate dapp application and ask users to enter their private keys into attackers app.
+2. An attacker can trick users to change their passwords on the attacker's domain and a lot more by sending such counterfeit emails and other bad stuff accordingly to the situation. 
+3. Steal their credentials by sending "phishing" messages.
+4. Trick them into falling for online scams by abusing the trust they have in your site.
+5. Spread malware by sharing malicious attachments.
+
+* While the reality of rampant email spoofing attacks might seem scary to some, the good news is: you can prevent or block email spoofing/phishing by implementing email authentication with modern email security measures, namely SPF, DKIM, and DMARC. These are 3 protocols that serve as the holy trinity of email authentication, and when deployed correctly, they can put a complete stop to email spoofing attacks.
+
+### Risk Breakdown
+
+* Risk: High
+* Difficulty to Exploit: Easy
+* Complexity: Easy
+* Weakness Category: Security Misconfiguration / Authentication Bypass (CWE: 1032)
+* CVSS2 Score: 8.4 [(AV:N/AC:M/Au:S/C:C/I:C/A:N)](https://nvd.nist.gov/cvss.cfm?calculator&version=2&vector=(AV:N/AC:M/Au:S/C:C/I:C/A:N))
+
+Reference: https://blog.detectify.com/2016/06/20/misconfigured-email-servers-open-the-door-to-spoofed-emails-from-top-domains/
+
+### Mitigation
+
+> As a website owner you should prevent your domains being used in spam mail by adopting both of the following approaches:
+
+1.Implement the Sender Policy Framework (SPF): publish a strict DNS record to explicitly state which servers are allowed to send email from moneyonchain.com.   
+2.Implement Domain Key Identified Mail (DKIM): use a digital signature to prove that outgoing email was legitimately sent from moneyonchain.com and that it wasn’t modified in transit.   
+3.Implement Domain-Based Message Authentication (DMARC): is simply an aggregator service to determine whether the sender uses SPF and DKIM, and how the sender recommends receivers should treat failed/spoofed emails claiming to be from the sender’s domain.  
+
+* Adopting these technologies also has the benefit that the emails you send are less likely to be marked as spam.
+* Adding strict spf,dkim,dmarc records would prevent forgery of emails for moneyonchain.com, there are a lot of articles available on the internet to help you configure the records properly to prevent spoofing.
+
+### EndNote
+
+* Please let me know if you have any other questions. I would be more than happy to help.
+
+> Bounties/Rewards can be calculated by determining the overall severity of the security vulnerability and One widely used metric for evaluating the severity of a security vulnerability is the Common Vulnerability Scoring System (CVSS).  
+
+
+Bounties Addresses:
+```
+DOC RSK ETH ERC20: 0x20DDfBeD1C168b8A1b1eb0845B3a8d0D2e3ddAA7 
+```
+
+Best Regards,  
+Tom
